--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "stockfish": "^15.0.0",
+    "js-chess-engine": "^1.0.2",
     "web-ext": "^7.5.0"
   },
   "devDependencies": {
